--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no,initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="./scripts/script.js"></script>
-    <title>Document</title>
+    <title>我的画板</title>
 </head>
+
 <body>
     <canvas id="xxx" width="300" height="300"></canvas>
-    <div class="actions">
+    
+    <div id="actions" class="actions">
         <button id="eraser">橡皮擦</button>
         <button id="brush">画笔</button>
     </div>
+    <script src="./scripts/main.js"></script>
 </body>
+
 </html>
