--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <canvas id="xxx" width="300" height="300"></canvas>
     
     <div id="actions" class="actions">
-        <button id="eraser">橡皮擦</button>
-        <button id="brush">画笔</button>
+            <svg id="pen" class="active icon"  aria-hidden="true">
+                    <use xlink:href="#icon-pen"></use>
+            </svg>
+            <svg id="eraser" class="icon" aria-hidden="true">
+                    <use xlink:href="#icon-eraser"></use>
+            </svg>
     </div>
+    <ol class="colors">
+        <li id="red" class="red"></li>
+        <li id="green" class="green"></li>
+        <li id="blue" class="blue"></li>
+    </ol>
     <script src="./scripts/main.js"></script>
+    <script src="//at.alicdn.com/t/font_1158778_c18mr8x3zd9.js"></script>
 </body>
 
 </html>
