--- a/index.html
+++ b/index.html
@@ -18,14 +18,21 @@
             <svg id="eraser" class="icon" aria-hidden="true">
                     <use xlink:href="#icon-eraser"></use>
             </svg>
+            <svg id="clear" class="clear" aria-hidden="true">
+                    <use xlink:href="#icon-clear"></use>
+            </svg>
     </div>
     <ol class="colors">
         <li id="red" class="red"></li>
         <li id="green" class="green"></li>
         <li id="blue" class="blue"></li>
     </ol>
+    <ol class="sizes">
+        <li id="thin" class="thin"></li>
+        <li id="thick" class="thick"></li>
+    </ol>
     <script src="./scripts/main.js"></script>
-    <script src="//at.alicdn.com/t/font_1158778_c18mr8x3zd9.js"></script>
+    <script src="//at.alicdn.com/t/font_1158778_75xjg7g53ii.js"></script>
 </body>
 
 </html>
