添加清除和下载

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <svg id="clear" class="clear" aria-hidden="true">
                     <use xlink:href="#icon-clear"></use>
             </svg>
+            <svg id="download" class="save" aria-hidden="true">
+                    <use xlink:href="#icon-save">save</use>
+            </svg>
     </div>
     <ol class="colors">
         <li id="red" class="red"></li>
@@ -32,7 +35,7 @@
         <li id="thick" class="thick"></li>
     </ol>
     <script src="./scripts/main.js"></script>
-    <script src="//at.alicdn.com/t/font_1158778_75xjg7g53ii.js"></script>
+    <script src="//at.alicdn.com/t/font_1158778_0j8565ytrbas.js"></script>
 </body>
 
 </html>
